<resources>

    <string name="app_name">Accelerometer Reading</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Accelerometer Reading</string>
    <string name="red_string">Red</string>
    <string name="green_string">Green</string>
    <string name="yellow_string">Yellow</string>
    <string name="blue_string">Blue</string>
    <string name="btnStart_text">Start</string>
    <string name="btnStop_text">Stop</string>
    <string name="btnUpload_text">Upload</string>
    <string name="title_activity_calibrate">CalibrateActivity</string>
    <string name="action_settings">Settings</string>
</resources>