<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/menu_red"
            android:orderInCategory="1"
            android:title="@string/red_string"/>

        <item
            android:id="@+id/menu_green"
            android:orderInCategory="2"
            android:title="@string/green_string"/>

        <item
            android:id="@+id/menu_yellow"
            android:orderInCategory="3"
            android:title="@string/yellow_string"/>

        <item
            android:id="@+id/menu_blue"
            android:orderInCategory="4"
            android:title="@string/blue_string"/>
    </group>

</menu>